Amended to be more mobile friendly and added a custom cursor

--- a/projects.json
+++ b/projects.json
@@ -1,17 +1,17 @@
 [
-  {
+   {
+  "title": "Stock Analysis Dashboard",
+  "description": "An interactive dashboard for visualizing stock data, including price, volume, and technical indicators.",
+  "image": "assets/images/StockMarketDashboard.png",
+  "url": "/stock-dashboard/",
+  "tags": ["JavaScript", "HTML", "CSS"]
+},
+{
     "title": "Photography Website",
     "description": "A photography website with e-commerce capabilities.",
     "image": "https://placehold.co/600x400/0047AB/FFEA00?text=Photo+Site&font-size=48",
     "tags": ["HTML", "CSS", "JavaScript"]
   },
- {
-  "title": "Stock Analysis Dashboard",
-  "description": "An interactive dashboard for visualizing stock data, including price, volume, and technical indicators.",
-  "image": "https://placehold.co/600x400/0047AB/FFEA00?text=Stock+Dashboard&font-size=48",
-  "url": "/stock-dashboard/",
-  "tags": ["JavaScript", "HTML", "CSS"]
-},
   {
     "title": "Personal Blog",
     "description": "A responsive blog platform with a custom content management system.",
