--- a/projects.json
+++ b/projects.json
@@ -1,10 +1,17 @@
 [
    {
-  "title": "Stock Analysis Dashboard",
-  "description": "An interactive dashboard for visualizing stock data, including price, volume, and technical indicators.",
-  "image": "assets/images/StockMarketDashboard.png",
-  "url": "/stock-dashboard/",
-  "tags": ["JavaScript", "HTML", "CSS"]
+    "title": "Stock Analysis Dashboard",
+    "description": "An interactive dashboard for visualizing stock data, including price, volume, and technical indicators.",
+    "image": "assets/images/StockMarketDashboard.png",
+    "url": "/stock-dashboard/",
+    "tags": ["JavaScript", "HTML", "CSS"]
+},
+{
+    "title": "Arcade Task Management App",
+    "description": "A simple and intuitive, retro arcade styled, task managment app to manage daily tasks.",
+    "image": "assets/images/RetroTaskQuest.png",
+    "url": "/ArcadeTaskMan/",
+    "tags": ["JavaScript", "CSS"]
 },
 {
     "title": "Photography Website",
@@ -17,11 +24,5 @@
     "description": "A responsive blog platform with a custom content management system.",
     "image": "https://placehold.co/600x400/0047AB/FFEA00?text=Personal+Blog&font-size=48",
     "tags": ["Python", "HTML"]
-  },
-  {
-    "title": "Task Management App",
-    "description": "A simple and intuitive app to manage daily tasks.",
-    "image": "https://placehold.co/600x400/0047AB/FFEA00?text=Task+App&font-size=48",
-    "tags": ["JavaScript", "CSS"]
   }
 ]
